...
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/find_path_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Find Path" />

    <TextView
        android:id="@+id/cost_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
...
